--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,10 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	<link href="css/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/ol.css" rel="stylesheet"/>
 	<link href="css/registracija.css" rel="stylesheet"/>
+	<link href="css/profil.css" rel="stylesheet"/>
 	<meta charset="utf-8"/>
 
 </head>
@@ -33,6 +30,7 @@
 
 <script src="app/registracija.js"></script>
 <script src="app/prijava.js"></script>
+<script src="app/profil.js"></script>
 <script src="app/odjava.js"></script>
 <script src="app/pocetna_manifestacije.js"></script>
 <script src="app/navbar.js"></script>
