--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,6 @@
 	<link href="css/ol.css" rel="stylesheet"/>
 	<link href="css/registracija.css" rel="stylesheet"/>
 	<link href="css/profil.css" rel="stylesheet"/>
-	<link href="css/pregled_svih_korisnika.css" rel="stylesheet"/>
 	<meta charset="utf-8"/>
 
 </head>
@@ -35,6 +34,8 @@
 <script src="app/odjava.js"></script>
 <script src="app/pocetna_manifestacije.js"></script>
 <script src="app/pregled_svih_korisnika.js"></script>
+<script src="app/manifestacije_prodavca.js"></script>
+<script src="app/karte_za_manifestaciju.js"></script>
 <script src="app/navbar.js"></script>
 <script src="app/app.js"></script>
 </body>
