Manifestation sort, search and more info

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,11 @@
 	<link href="css/ol.css" rel="stylesheet"/>
 	<link href="css/registracija.css" rel="stylesheet"/>
 	<link href="css/profil.css" rel="stylesheet"/>
+	<link href="css/pocetna-manifestacije.css" rel="stylesheet"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<meta charset="utf-8"/>
+	<link href="css/openlayer.min.css" rel="stylesheet">
+	<script src="js/openlayers.js"></script>
 
 </head>
 
@@ -17,6 +21,8 @@
     <router-view></router-view>
 
 </div>
+
+<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 
 <script src="js/vue.js"></script>
 <script src="js/vue-router.js"></script>
@@ -32,6 +38,7 @@
 <script src="app/prijava.js"></script>
 <script src="app/profil.js"></script>
 <script src="app/odjava.js"></script>
+<script src="app/manifestacija.js"></script>
 <script src="app/pocetna_manifestacije.js"></script>
 <script src="app/pregled_svih_korisnika.js"></script>
 <script src="app/manifestacije_prodavca.js"></script>
