Add new manifestation

--- a/static/index.html
+++ b/static/index.html
@@ -40,8 +40,9 @@
 <script src="app/odjava.js"></script>
 <script src="app/manifestacija.js"></script>
 <script src="app/pocetna_manifestacije.js"></script>
-<script src="app/pregled_svih_korisnika.js"></script>
 <script src="app/manifestacije_prodavca.js"></script>
+<script src="app/pregled_svih_korisnika.js"></script>
+<script src="app/nova_manifestacija.js"></script>
 <script src="app/karte_za_manifestaciju.js"></script>
 <script src="app/navbar.js"></script>
 <script src="app/app.js"></script>
