Search, filter and sort - users and tickets

--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,7 @@
 <script src="app/manifestacija.js"></script>
 <script src="app/pocetna_manifestacije.js"></script>
 <script src="app/manifestacije_prodavca.js"></script>
+<script src="app/karte_kupca.js"></script>
 <script src="app/pregled_svih_korisnika.js"></script>
 <script src="app/nova_manifestacija.js"></script>
 <script src="app/karte_za_manifestaciju.js"></script>
