--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,7 @@
 <head>
 	<link href="css/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/ol.css" rel="stylesheet"/>
-	<link href="css/registracija.css" rel="stylesheet"/>
-	<link href="css/profil.css" rel="stylesheet"/>
-	<link href="css/pocetna-manifestacije.css" rel="stylesheet"/>
+	<link href="css/app.css" rel="stylesheet"/>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<meta charset="utf-8"/>
 	<link href="css/openlayer.min.css" rel="stylesheet">
@@ -42,6 +40,7 @@
 <script src="app/pocetna_manifestacije.js"></script>
 <script src="app/manifestacije_prodavca.js"></script>
 <script src="app/karte_kupca.js"></script>
+<script src="app/korpa.js"></script>
 <script src="app/pregled_svih_korisnika.js"></script>
 <script src="app/nova_manifestacija.js"></script>
 <script src="app/karte_za_manifestaciju.js"></script>
