--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,8 @@
 	<meta charset="utf-8"/>
 	<link href="css/openlayer.min.css" rel="stylesheet">
 	<script src="js/openlayers.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.6.1/build/ol.js"></script>
+	<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList"></script>
 
 </head>
 
