Fixed manifestation edit

--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,7 @@
 <script src="app/korpa.js"></script>
 <script src="app/pregled_svih_korisnika.js"></script>
 <script src="app/nova_manifestacija.js"></script>
+<script src="app/izmena_manifestacije.js"></script>
 <script src="app/karte_za_manifestaciju.js"></script>
 <script src="app/navbar.js"></script>
 <script src="app/app.js"></script>
