--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,7 @@
 <script src="app/nova_manifestacija.js"></script>
 <script src="app/izmena_manifestacije.js"></script>
 <script src="app/karte_za_manifestaciju.js"></script>
+<script src="app/prikaz_komentara.js"></script>
 <script src="app/navbar.js"></script>
 <script src="app/app.js"></script>
 </body>
